--- a/local_contact.html
+++ b/local_contact.html
@@ -127,7 +127,7 @@
             </script>
 
                     <!--Адрес, на который отправляется форма-->
-                    <input type="hidden" name="recipient" id="recipient" value="mailpost">
+                    <input type="hidden" name="recipient" id="recipient" value="tech support">
                     <input type="hidden" name="markdown" id="markdown" value="trello">
 
                     <!--Использовать кастомный вариант формы-->
